[tool.poetry]
name = "detectron2"
version = "0.1.0"
description = ""
authors = ["Tomas Ostasevicius <t.ostasevicius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = ">=1.3"
termcolor = ">=1.1"
Pillow = ">=6.0"
yacs = ">=0.1.6"
tabulate = "^0.8.6"
cloudpickle = "^1.2.2"
matplotlib = "^3.1.2"
tqdm = "^4.40.2"
imagesize = "^1.1.0"
tensorboard = "^2.1.0"
torchvision = "^0.4.2"
opencv-python = "^4.1.2"
fvcore = {git = 'https://github.com/facebookresearch/fvcore'}
cython = "^0.29.14"
pycocotools = "^2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
